--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,13 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^6.0.0
   change_app_package_name: ^1.4.0
+  flutter_launcher_icons: ^0.14.3
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logotrans.png"  # Replace with your icon path
+  adaptive_icon_background: "#ffffff"     # Optional for Android
 
 
 # The following section is specific to Flutter packages.
