--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   camera: ^0.10.5
   image_picker: ^1.0.7
   path_provider: ^2.1.2
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
